--- a/views/CSS/DBedit.css
+++ b/views/CSS/DBedit.css
@@ -39,6 +39,12 @@ ul{
     border-radius: 30px;
     padding: 20px;
 }
+.contact-item input,
+.contact-item textarea
+{
+    width: 100%;
+    box-sizing: border-box;
+}
 
 .displayNone{
     display: None;
